font size fixes on tablet

--- a/public/cdn/css/tmg-tablet.css
+++ b/public/cdn/css/tmg-tablet.css
@@ -9,3 +9,5 @@
 .tmg-popup { margin-top:120px; left:15%; width:80%; }
 
 .primary-body p { font-weight:300; }
+
+.tmg-popup-navbar-blocker { width:88%; }
